@@ -5,7 +5,8 @@
 
 import math, sys, unittest
 sys.path.insert(0, '..')
-import FixedPoint
+from FixedPoint import FXnum, FXfamily, \
+        FXdomainError, FXfamilyError
 
 
 class FixedPointTest(unittest.TestCase):
@@ -30,9 +31,9 @@ class FixedPointTest(unittest.TestCase):
 
     def testBoolConditions(self):
         """values used in boolean expressions should behave as true/false"""
-        if FixedPoint.FXnum(0):
+        if FXnum(0):
             self.fail()
-        if FixedPoint.FXnum(1):
+        if FXnum(1):
             pass
         else:
             self.fail()
@@ -42,34 +43,34 @@ class FixedPointTest(unittest.TestCase):
         """arithmetic operations on object should not alter orignal value"""
         scale = 0.297
         for i in range(-8, 8):
-            orig = FixedPoint.FXnum(i * scale)
+            orig = FXnum(i * scale)
 
-            x = FixedPoint.FXnum(i * scale)
+            x = FXnum(i * scale)
             x0 = x
             if x is x0:
                 pass
             else:
                 self.fail()
 
-            x = FixedPoint.FXnum(i * scale)
+            x = FXnum(i * scale)
             x0 = x
             x += 1
             self.assertEqual(orig, x0)
             if x is x0: self.fail()
 
-            x = FixedPoint.FXnum(i * scale)
+            x = FXnum(i * scale)
             x0 = x
             x -= 1
             self.assertEqual(orig, x0)
             if x is x0: self.fail()
 
-            x = FixedPoint.FXnum(i * scale)
+            x = FXnum(i * scale)
             x0 = x
             x *= 2
             self.assertEqual(orig, x0)
             if x is x0: self.fail()
 
-            x = FixedPoint.FXnum(i * scale)
+            x = FXnum(i * scale)
             x0 = x
             x /= 2
             self.assertEqual(orig, x0)
@@ -79,9 +80,9 @@ class FixedPointTest(unittest.TestCase):
         """check tests on equivalence of FXfamilies"""
         idxlist = [8, 16, 24, 33, 59]
         for idx in idxlist:
-            fam0 = FixedPoint.FXfamily(idx)
+            fam0 = FXfamily(idx)
             for jdx in idxlist:
-                fam1 = FixedPoint.FXfamily(jdx)
+                fam1 = FXfamily(jdx)
 
                 if idx == jdx:
                     self.failUnless(fam0 == fam1)
@@ -93,16 +94,16 @@ class FixedPointTest(unittest.TestCase):
 
     def testConversion(self):
         """check that conversion between families preserves values"""
-        famlist = [FixedPoint.FXfamily(b) for b in [32, 40, 48, 80, 120]]
+        famlist = [FXfamily(b) for b in [32, 40, 48, 80, 120]]
         for i in range(1,10):
             xpos = (float)(1 << (2 * i)) + 1.0 / (1 << i);
             for x in [xpos, -xpos]:
                for fam0 in famlist:
-                    fp0 = FixedPoint.FXnum(x, fam0)
+                    fp0 = FXnum(x, fam0)
                     for fam1 in famlist:
-                        fp1 = FixedPoint.FXnum(fp0, fam1)
+                        fp1 = FXnum(fp0, fam1)
                         try: f = (fp0 == fp1)
-                        except FixedPoint.FXfamilyError:
+                        except FXfamilyError:
                             self.failIf(fam0 is fam1)
                         else:
                             self.failUnless(fam0 is fam1)
@@ -112,35 +113,44 @@ class FixedPointTest(unittest.TestCase):
 
     def testPrinting(self):
         """check conversion to string"""
-        for i in range(1,10):
+        for i in range(1, 10):
             v = 2 ** i
-            for x in [v, 1.0/v]:
+            for x in [v, -v, 1.0/v, -1.0/v]:
                 fpa = "%.8g" % x
-                fpx = str(FixedPoint.FXnum(x))
+                fpx = str(FXnum(x))
                 self.assertEqual(fpa, fpx)
 
+    def testRepresentation(self):
+        """check repr() functionality"""
+        for i in range(1, 30):
+            v = 1.7 ** i
+            for x in [v, -v, 1.0/v, -1.0/v]:
+                fp0 = FXnum(x)
+                # ensure that value extracted via repr() is in same FXfamily:
+                fpb = FXnum(eval(repr(fp0)), family=fp0.family)
+                self.assertEqual(fp0, fpb)
 
     def testIntCasts(self):
         """rounding on casting to int/long should match float-conversions"""
         for i in range(-40,40):
             x = i / 8.0
-            self.assertEqual(int(x), int(FixedPoint.FXnum(x)))
-            self.assertEqual(long(x), long(FixedPoint.FXnum(x)))
+            self.assertEqual(int(x), int(FXnum(x)))
+            self.assertEqual(long(x), long(FXnum(x)))
 
 
     def testNegating(self):
         """check prefix operators"""
-        fam17 = FixedPoint.FXfamily(17)
+        fam17 = FXfamily(17)
         for i in range(-32, 32):
             x = i * 0.819
-            fx = FixedPoint.FXnum(x, fam17)
-            zero = FixedPoint.FXnum(0, fam17)
+            fx = FXnum(x, fam17)
+            zero = FXnum(0, fam17)
             try:
                 self.assertEqual(zero, fx + (-fx))
                 self.assertEqual(zero, -fx + fx)
                 self.assertEqual((-1 * fx), -fx)
                 self.assertEqual(zero, (-1 * fx) + (-fx) + 2 * (+fx))
-            except FixedPoint.FXexception:
+            except FXexception:
                 self.fail()
 
 
@@ -148,10 +158,10 @@ class FixedPointTest(unittest.TestCase):
         """addition operators should promote & commute"""
         scale = 0.125
         for x in range(-16, 16):
-            fpx = FixedPoint.FXnum(x * scale)
+            fpx = FXnum(x * scale)
             for y in range(-32, 32):
-                fpy = FixedPoint.FXnum(y * scale)
-                fpa = FixedPoint.FXnum((x + y) * scale)
+                fpy = FXnum(y * scale)
+                fpa = FXnum((x + y) * scale)
 
                 # compute various forms of a = (x + y):
 
@@ -174,10 +184,10 @@ class FixedPointTest(unittest.TestCase):
         """subtraction operators should promote & anti-commute"""
         scale = 0.0625
         for x in range(-32, 16):
-            fpx = FixedPoint.FXnum(x * scale)
+            fpx = FXnum(x * scale)
             for y in range(-16, 32):
-                fpy = FixedPoint.FXnum(y * scale)
-                fpa = FixedPoint.FXnum((x - y) * scale)
+                fpy = FXnum(y * scale)
+                fpa = FXnum((x - y) * scale)
 
                 # compute various forms of a = (x - y):
 
@@ -201,10 +211,10 @@ class FixedPointTest(unittest.TestCase):
         scale = 0.25
         scale2 = scale * scale
         for x in range(-16, 32):
-            fpx = FixedPoint.FXnum(x * scale)
+            fpx = FXnum(x * scale)
             for y in range(-32, 16):
-                fpy = FixedPoint.FXnum(y * scale)
-                fpa = FixedPoint.FXnum((x * y) * scale2)
+                fpy = FXnum(y * scale)
+                fpa = FXnum((x * y) * scale2)
 
                 # compute various forms of a = (x * y):
 
@@ -225,16 +235,16 @@ class FixedPointTest(unittest.TestCase):
 
     def testDivision(self):
         """division operators should promote & inverse-commute"""
-        fam62 = FixedPoint.FXfamily(62)
+        fam62 = FXfamily(62)
         scale = 0.125
         scale2 = scale * scale
         for a in range(-32, 32):
             if a == 0: continue
-            fpa = FixedPoint.FXnum(a * scale, fam62)
+            fpa = FXnum(a * scale, fam62)
             for y in range(-16, 16):
                 if y == 0: continue
-                fpy = FixedPoint.FXnum(y * scale, fam62)
-                fpx = FixedPoint.FXnum((y * a) * scale2, fam62)
+                fpy = FXnum(y * scale, fam62)
+                fpx = FXnum((y * a) * scale2, fam62)
 
                 # compute various forms of a = (x / y):
 
@@ -255,57 +265,57 @@ class FixedPointTest(unittest.TestCase):
 
     def testFamilyProtection(self):
         """check that arithmetic operators do not transmute resolution families"""
-        famlist = [FixedPoint.FXfamily(res) for res in [8, 16, 40, 90]]
+        famlist = [FXfamily(res) for res in [8, 16, 40, 90]]
         for fam0 in famlist:
             for fam1 in famlist:
-                x = FixedPoint.FXnum(2, fam0)
-                y = FixedPoint.FXnum(3, fam1)
+                x = FXnum(2, fam0)
+                y = FXnum(3, fam1)
                 try: a = x + y
-                except FixedPoint.FXfamilyError: self.failIf(fam0 is fam1)
+                except FXfamilyError: self.failIf(fam0 is fam1)
                 else: self.failUnless(fam0 is fam1)
                 try: a = x - y
-                except FixedPoint.FXfamilyError: self.failIf(fam0 is fam1)
+                except FXfamilyError: self.failIf(fam0 is fam1)
                 else: self.failUnless(fam0 is fam1)
                 try: a = x * y
-                except FixedPoint.FXfamilyError: self.failIf(fam0 is fam1)
+                except FXfamilyError: self.failIf(fam0 is fam1)
                 else: self.failUnless(fam0 is fam1)
                 try: a = x / y
-                except FixedPoint.FXfamilyError: self.failIf(fam0 is fam1)
+                except FXfamilyError: self.failIf(fam0 is fam1)
                 else: self.failUnless(fam0 is fam1)
 
 
     def testSqrt(self):
         """sqrt method should find square-roots"""
-        fam62 = FixedPoint.FXfamily(62)
+        fam62 = FXfamily(62)
         scale = 0.94
         for i in range(-40, 40):
             x = i * scale
-            fx = FixedPoint.FXnum(x, fam62)
+            fx = FXnum(x, fam62)
             try:
                 rt = fx.sqrt()
-            except FixedPoint.FXdomainError:
+            except FXdomainError:
                 self.failIf(x >= 0)
             else:
                 rt2 = float(rt * rt)
                 self.assertAlmostEqual(x, rt2)
                 if i == 0:
-                    self.assertEqual(FixedPoint.FXnum(0, fam62), rt)
+                    self.assertEqual(FXnum(0, fam62), rt)
 
 
     def testExp(self):
         """exponent method should agree with math.exp"""
-        fam62 = FixedPoint.FXfamily(62)
+        fam62 = FXfamily(62)
         scale = 0.23
         for i in range(-32, 32):
             x = i * scale
             exp_true = math.exp(x)
-            exp = FixedPoint.FXnum(x, fam62).exp()
+            exp = FXnum(x, fam62).exp()
             self.assertAlmostEqual(exp_true, exp)
 
 
     def testLog(self):
         """logarithm method agree with math.log"""
-        fam62 = FixedPoint.FXfamily(62)
+        fam62 = FXfamily(62)
         base = 1.5
         for i in range(1, 32):
             for j in range(0,2):
@@ -314,48 +324,48 @@ class FixedPointTest(unittest.TestCase):
                 else:
                     x = base ** i
                 log_true = math.log(x)
-                log = FixedPoint.FXnum(x, fam62).log()
+                log = FXnum(x, fam62).log()
                 self.assertAlmostEqual(log_true, log)
 
 
     def testExpLog(self):
         """exp and log methods should be inverses & agree with math.*"""
-        fam62 = FixedPoint.FXfamily(62)
+        fam62 = FXfamily(62)
         scale = 0.27
         for i in range(-32, 32):
             x = i * scale
-            exp = FixedPoint.FXnum(x, fam62).exp()
+            exp = FXnum(x, fam62).exp()
             logexp = exp.log()
             self.assertAlmostEqual(x, float(logexp))
 
 
     def testPow(self):
-        fam62 = FixedPoint.FXfamily(62)
+        fam62 = FXfamily(62)
         scale = 0.205
         scale2 = 0.382
         for i in range(1, 32):
             x = i * scale
-            pow = FixedPoint.FXnum(0, fam62) ** x
-            self.assertEqual(FixedPoint.FXnum(1, fam62), pow)
+            pow = FXnum(0, fam62) ** x
+            self.assertEqual(FXnum(1, fam62), pow)
             for j in range(-16, 16):
                 y = j * scale2
                 pow_true = math.pow(x, y)
-                pow = FixedPoint.FXnum(x, fam62) ** y
+                pow = FXnum(x, fam62) ** y
                 self.assertAlmostEqual(pow_true, pow)
 
 
     def testSinCos(self):
         """sin/cos methods agree with math.sin/cos"""
-        fam62 = FixedPoint.FXfamily(62)
+        fam62 = FXfamily(62)
         scale = 0.342
-        fang = FixedPoint.FXnum(0, fam62)
+        fang = FXnum(0, fam62)
         self.assertEqual(fang, fang.sin())
-        self.assertEqual(FixedPoint.FXnum(1,fam62), fang.cos())
+        self.assertEqual(FXnum(1,fam62), fang.cos())
         for i in range(-32, 32):
             x = i * scale
             sin_true = math.sin(x)
             cos_true = math.cos(x)
-            fang = FixedPoint.FXnum(x, fam62)
+            fang = FXnum(x, fam62)
             (sin, cos) = fang.sincos()
             self.assertAlmostEqual(sin_true, sin)
             self.assertAlmostEqual(cos_true, cos)
@@ -365,25 +375,25 @@ class FixedPointTest(unittest.TestCase):
 
     def testArctan(self):
         """atan method agree with math.sin/cos"""
-        fam62 = FixedPoint.FXfamily(62)
+        fam62 = FXfamily(62)
         scale = 0.277
         for i in range(-32, 32):
             tan = i * scale
             ang_true = math.atan(tan)
-            ang = FixedPoint.FXnum(tan, fam62).atan()
+            ang = FXnum(tan, fam62).atan()
             self.assertAlmostEqual(ang_true, ang)
 
 
     def testArcSinCos(self):
         """asin/acos methods should be inverses of sin/cos"""
-        fam62 = FixedPoint.FXfamily(62)
-        trig = FixedPoint.FXnum(0, fam62)
+        fam62 = FXfamily(62)
+        trig = FXnum(0, fam62)
         self.assertEqual(trig, trig.asin())
-        self.assertEqual(trig, FixedPoint.FXnum(1,fam62).acos())
+        self.assertEqual(trig, FXnum(1,fam62).acos())
         steps = 20
         for i in range(0, steps + 1):
             for s in [-1.0, 1.0]:
-                trig = FixedPoint.FXnum((i * s) / steps, fam62)
+                trig = FXnum((i * s) / steps, fam62)
                 isn = trig.asin()
                 self.failUnless(abs(isn) <= fam62.GetPi() / 2)
                 self.assertAlmostEqual(float(trig), float(isn.sin()))
@@ -391,6 +401,14 @@ class FixedPointTest(unittest.TestCase):
                 self.failUnless(0 <= ics and ics <= fam62.GetPi())
                 self.assertAlmostEqual(float(trig), float(ics.cos()))
 
+
+# ensure support for older unittest module (e.g. Python-2.2)
+try:
+    fn = FixedPointTest.assertAlmostEqual
+except AttributeError:
+    def almostequal(obj, first, second, places=7):
+        obj.failUnless(abs(first-second) < (10.0 ** -places))
+    FixedPointTest.assertAlmostEqual = almostequal
 
 
 if __name__ == "__main__":
